kubernetes-files/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels: 
    type: api
spec:
  template:
    metadata: 
      name: api-pod
      labels:
        type: api
    spec:
      containers:
        - name: api-container
          image: ghcr.io/sumanthmysore/voteapp-be:latest
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret 
  replicas: 4
  selector:
    matchLabels:
      type: api
