kubernetes-files/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    type: db
    tier: database
spec:
  replicas: 3
  selector:
    matchLabels:
      type: db
      tier: database
  # serviceName: mongo-svc
  template:
    metadata:
      name: mongodb
      labels:
        type: db
        tier: database
    spec:
      containers:
        - name: mongodb
          image: ghcr.io/sumanthmysore/voteapp-db:randomtag
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
      imagePullSecrets:
        - name: ghcr-secret
