kubernetes-files/fe-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deployment
  labels: 
    type: fe
spec:
  template:
    metadata: 
      name: fe-pod
      labels:
        type: fe
    spec:
      containers:
        - name: fe-container
          image: ghcr.io/sumanthmysore/voteapp-fe:123
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret  
  replicas: 4
  selector:
    matchLabels:
      type: fe
