kubernetes-files/api-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: api-service
  labels:
    type: api
spec:
  # type: ClusterIP
  type: NodePort
  ports:
    - nodePort: 30005
      port: 8080
      targetPort: 8080
  selector:
    type: api
