kubernetes-files/db-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    type: db
    tier: database
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    type: db
    tier: database
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    type: db
    tier: database
spec:
  replicas: 3
  selector:
    matchLabels:
      type: db
      tier: database
  serviceName: mongo
  template:
    metadata:
      name: mongodb
      labels:
        type: db
        tier: database
    spec:
      containers:
        - name: mongodb
          image: ghcr.io/sumanthmysore/voteapp-db:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
      imagePullSecrets:
        - name: ghcr-secret 

  #         volumeMounts:
  #           - mountPath: /data/db
  #             name: mongodb-persistent-storage-claim
  # volumeClaimTemplates:
  #   - metadata:
  #       name: mongodb-persistent-storage-claim
  #       # namespace: cloudacademy
  #       annotations:
  #         volume.beta.kubernetes.io/storage-class: "standard"
  #     spec:
  #       accessModes: ["ReadWriteOnce"]
  #       resources:
  #         requests:
  #           storage: 1Gi
